# xmobar-conf

./: README.md  cabal.project  hie.yaml  xmobar-custom.cabal  xmobar.hs
