cabal-version: 3.0
name:          xmobar-custom
version:       0.0.1.0

executable xmobar
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints
    -Wno-missing-signatures

  main-is:            xmobar.hs
  build-depends:
    , base    ^>=4.13
    , relude  ==0.7.0.0
    , xmobar  ==0.33
